# obs-studio

./: .gitmodules  CMakeLists.txt
libobs/: CMakeLists.txt  obs-config.h  obs-scene.c  obs-scene.h
obs/: CMakeLists.txt  check-record-file.cpp  check-record-file.hpp  face-add.cpp  face-add.hpp  obs-app.cpp  obs.rc  online-live-state.cpp  remote-data.cpp  remote-data.hpp  remote-post.cpp  remote-text.cpp  resource.h  s3-send-record-file.cpp  s3-send-record-file.hpp  web-login.cpp  win-monitor.cpp  win-monitor.hpp  window-basic-login-face.cpp  window-basic-login-face.hpp  window-basic-login-image.cpp  window-basic-login-image.hpp  window-basic-login.cpp  window-basic-login.hpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-properties.cpp  window-basic-properties.hpp  window-basic-settings.cpp  window-basic-settings.hpp
plugins/face-detect/: CMakeLists.txt  CvTextFreeType.cpp  CvTextFreeType.h  face-detect-plugin-main.c  face-detect.cpp  face-detect.def
plugins/face-detect/inc/: face-detect.h
plugins/face-detect/lib/libx64/opencv/Debug/: freetype.lib  libjasper.lib  libjpeg.lib  libpng.lib  libtiff.lib  libwebp.lib  opencv_bgsegm310.lib  opencv_bioinspired310.lib  opencv_fuzzy310.lib  opencv_highgui310.lib  opencv_optflow310.lib  opencv_plot310.lib  opencv_reg310.lib  opencv_stereo310.lib  opencv_structured_light310.lib  opencv_superres310.lib  opencv_videoio310.lib  opencv_xobjdetect310.lib  zlib.lib
plugins/face-detect/lib/libx64/opencv/Release/: freetype.lib  libjasper.lib  libjpeg.lib  libpng.lib  libtiff.lib  libwebp.lib  opencv_aruco310.lib  opencv_bgsegm310.lib  opencv_bioinspired310.lib  opencv_dpm310.lib  opencv_face310.lib  opencv_fuzzy310.lib  opencv_highgui310.lib  opencv_imgcodecs310.lib  opencv_line_descriptor310.lib  opencv_objdetect310.lib  opencv_optflow310.lib  opencv_plot310.lib  opencv_reg310.lib  opencv_saliency310.lib  opencv_shape310.lib  opencv_stereo310.lib  opencv_structured_light310.lib  opencv_superres310.lib  opencv_surface_matching310.lib  opencv_video310.lib  opencv_videoio310.lib  opencv_videostab310.lib  opencv_xfeatures2d310.lib  opencv_xobjdetect310.lib  zlib.lib
plugins/face-detect/lib/libx86/opencv/Debug/: freetype.lib  libjasper.lib  libjpeg.lib  libpng.lib  libtiff.lib  libwebp.lib  opencv_bgsegm310.lib  opencv_bioinspired310.lib  opencv_dpm310.lib  opencv_face310.lib  opencv_fuzzy310.lib  opencv_highgui310.lib  opencv_optflow310.lib  opencv_plot310.lib  opencv_reg310.lib  opencv_saliency310.lib  opencv_shape310.lib  opencv_stereo310.lib  opencv_structured_light310.lib  opencv_superres310.lib  opencv_video310.lib  opencv_videoio310.lib  opencv_xobjdetect310.lib  zlib.lib
plugins/face-detect/lib/libx86/opencv/Release/: freetype.lib  libjasper.lib  libjpeg.lib  libpng.lib  libtiff.lib  libwebp.lib  opencv_aruco310.lib  opencv_bgsegm310.lib  opencv_bioinspired310.lib  opencv_ccalib310.lib  opencv_dpm310.lib  opencv_face310.lib  opencv_flann310.lib  opencv_fuzzy310.lib  opencv_highgui310.lib  opencv_imgcodecs310.lib  opencv_line_descriptor310.lib  opencv_objdetect310.lib  opencv_optflow310.lib  opencv_plot310.lib  opencv_reg310.lib  opencv_rgbd310.lib  opencv_saliency310.lib  opencv_shape310.lib  opencv_stereo310.lib  opencv_structured_light310.lib  opencv_superres310.lib  opencv_surface_matching310.lib  opencv_text310.lib  opencv_video310.lib  opencv_videoio310.lib  opencv_videostab310.lib  opencv_xfeatures2d310.lib  opencv_xobjdetect310.lib  opencv_xphoto310.lib  zlib.lib
plugins/libs3/: CMakeLists.txt  libs3-plugin-main.c  send-data.c
plugins/libs3/inc/: libs3.h
plugins/libs3/inc/mingw/: pthread.h
plugins/libs3/lib/libx64/libxml2/: libxml2.lib
plugins/libs3/lib/libx86/libxml2/: libxml2.lib
plugins/libs3/src/: bucket.c  general.c  libs3.def  mingw_functions.c  mingw_s3_functions.c  multipart.c  request.c  request_context.c  s3.c
plugins/win-monitor/: CMakeLists.txt  win-monitor-plugin-main.c  win-monitor.c  win-monitor.def  win-monitor.h
(+26 files in other folders)
